[feature/32-delete-the-job-by-its-owner] owner of the job advert can delete it. locales added. swagger added.
