# swagger.yaml
@@ -2123,3 +2123,29 @@ paths:
                   message:
                     type: string
                     example: job advert updated succesfully
+    delete:
+      tags: [Job]
+      description: >
+        Owner of the job advert can delete the advert
+      summary: Owner of the job advert can delete the advert
+      parameters:
+        - in: path
+          name: jobId
+          schema:
+            type: string
+          required: true
+          description: The id of job
+      responses:
+        "200":
+          description: It will success message if job advert deleted succesfully
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  success:
+                    type: boolean
+                    example: true
+                  message:
+                    type: string
+                    example: job advert deleted succesfully
